//grpc 登陆服务配置文件

syntax = "proto3";
package video.service.v1;
option go_package = "evn_video/pkg/service/video.service.v1";


message IndexRequest{
  string token = 1;
}
message MenuMessage {
  int64  id = 1;
  int64 pid = 2;
  string title = 3;
  string icon = 4;
  string url = 5;
  string filePath = 6;
  string role = 7;
  int32 status = 8;
  string values = 9;
  int32 showSlider = 10;
  repeated MenuMessage children = 11;
}
message  IndexResponse{
  repeated MenuMessage menus = 1;
}

service VideoService {
  rpc Index(IndexRequest) returns (IndexResponse) {}
}